# Learning-Note

./: README.md
Autonomous Driving/: Autonomous Driving Learning Note.md
Autonomous_Driving/: Carla_Learning_Note.md
CAPLdll/: CAPLdll Programming.md  v2x_cfg.7z
CAPLdll/CAPLdll/CMakeProject/: CMakeLists.txt
CAPLdll/CAPLdll/EXAMPLE/: CANalyzerCAPLDll.cfg  CANoeCAPLdll.cfg  Comment_CANalyzerCAPLDll.txt
CAPLdll/CAPLdll/EXAMPLE/Modules/: capldll.vmodule
CAPLdll/CAPLdll/EXAMPLE/node/: capldll.can
CAPLdll/CAPLdll/Sources/: capldll.cpp
CAPLdll/CAPLdll/VS 2017 Project/: capldll.vcxproj  capldll.vcxproj.filters  json_vc71_libmt.lib
CAPLdll/CAPLdll/VS 2017 Project/Debug/: capldll.exp  capldll.lib  capldll.map
CAPLdll/CAPLdll/VS 2017 Project/Debug/capldll.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  bscmake.command.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  capldll.lastbuildstate  (+5 more)
CAPLdll/UDP client and server/c++/UDPclient/: JsonTest.sln
CAPLdll/UDP client and server/c++/UDPserver/: JsonTest.sln
CAPLdll/UDP client and server/python/: udp_client.py  udp_server.py
GPS/: GPS_Note.md
GPS_learning/: BearingAngle_GPS.py  Distance_Bearing.py  Mark_Track.kml
Git/: Git_Note.md
OBU/V2X_ROS_app/src/: v2x_ros_receive.c  v2x_ros_send.c
ROS/: ROS_Learning_Note.md
ROS/v2x_ros_driver/: CMakeLists.txt
ROS/v2x_ros_driver/msg/: V2X.msg
ROS/v2x_ros_driver/scripts/: receive_upd_signal.py  send_upd_signal.py
Virtual Machine/: Paramiko Remote Control.md  Virtual Machine Learning Note.md  ssh_paramiko.py
Virtual_Machine/: ssh_updated.py
(+32 files in other folders)
